# swm-jupyter-term

./: .flake8  .gitignore  .prettierignore  .pypirc  DEVELOPMENT.md  Dockerfile  EXTENSION.md  MANIFEST.in  Makefile  README.md  RELEASE.md  install.json  jupyterhub_config.py  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  run-jupyterhub.sh  setup.py  setup_extension.py  setup_spawner.py  start-container.sh  start.sh  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: build.yml  check-release.yml  ci.yml
binder/: environment.yml  postBuild
extension/: .gitignore  .prettierignore  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  build.sh  install.json  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  run.sh  setup.py  tsconfig.json
extension/.github/workflows/: build.yml  check-release.yml
extension/binder/: environment.yml  postBuild
extension/jupyter-config/nb-config/: swm_jupyter_term.json
extension/jupyter-config/server-config/: swm_jupyter_term.json
extension/src/: handler.ts  index.ts
extension/style/: base.css
extension/swm_jupyter_term/: __init__.py  handlers.py
jupyter-config/nb-config/: swm_jupyter_ext.json
jupyter-config/server-config/: swm_jupyter_ext.json
notebooks/: pytorch-demo.ipynb  top500.ipynb
schema/: plugin.json
spawner/: .gitignore  Makefile  README.md  jupyterhub_config.py  requirements.in  requirements.txt  setup.py  version.py
spawner/swm_jupyter_spawner/: swmspawner.py
spawner/swmspawner/: swmspawner.py
src/: handler.ts  index.ts
swm_jupyter_ext/: __init__.py  handlers.py
swm_jupyter_spawner/: form.html.jinja  form.py  job.sh.jinja  spawner.py  swmspawner.py
swm_jupyter_term/: __init__.py  _version.py  handlers.py
swmjupyter/: form.html.jinja  form.py  job.sh.jinja  spawner.py
templates/: azure_jupyter-spawner.conf
test/mocked-server/: Makefile  README.md  requirements.in  requirements.txt  run.py  setup.py
test/mocked-server/.openapi-generator/: FILES
test/mocked-server/docs/: DefaultApi.md  Job.md  JobToSubmit.md
test/mocked-server/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
test/mocked-server/openapi_client/api/: default_api.py
test/mocked-server/openapi_client/model/: job.py  job_to_submit.py
test/mocked-server/openapi_client/models/: __init__.py
test/mocked-server/test/: test_default_api.py  test_job.py  test_job_to_submit.py
