[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["swm_jupyter_ext/labextension/static/style.js"]
ensured-targets = ["swm_jupyter_ext/labextension/static/style.js", "swm_jupyter_ext/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["swm_jupyter_ext/labextension/**", "yarn.lock", ".*", "package-lock.json"]

[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''
(
  /(
    | \.git
    | \.venv
    | \.mypy_cache
  )/
)
'''

[tool.ruff]
line-length = 120
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".tox",
    ".venv",
]

[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
python_version = "3.10"
follow_imports = "silent"
ignore_missing_imports = true
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
allow_incomplete_defs = true
allow_untyped_calls = true
